# keyboard

./: .gitignore  keyboard-layout-1.json  keyboard-layout.json
.github/workflows/: kicad.yml
firmware/: .gitignore  CMakeLists.txt  Makefile
firmware/src/: main.c
fw/: .clang-format  CMakeLists.txt  Dockerfile  Makefile  config.h  gencfg.py  main.cc  tusb_config.h  usb_descriptors.c  util.h
fw/ci/: build.sh
fw/renderer/: main.py  pyproject.toml
fw/src/: config.h  keyboard.cc  keyboard.h  main.cc  sh1107.cc  sh1107.h  tusb_config.h  usb_descriptors.c  util.h
mykb/: mykb.kicad_pcb  mykb.kicad_pro  mykb.kicad_sch  mykb.sch  sym-lib-table  ~mykb.kicad_pcb.lck
mykb-old/: omykb.kicad_pro  omykb.kicad_sch  omykb.sch
mykb/parts/: ABM8-272-T3.dcm  ABM8272T3.kicad_mod
mykb/production/: netlist.ipc
oled/: main.py  pyproject.toml
omykb/: omykb.kicad_pcb  omykb.kicad_pro  omykb.kicad_sch  sym-lib-table
omykb-old/: omykb.kicad_pcb
omykb/parts/: ABM8-272-T3.kicad_sym  ABM8-272-T3.lib  ABM8-272-T3.mod
pcb/: pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
pcb-1/: .gitignore  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
